added jquery, hides a couple more elements

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
       "https://stackoverflow.com/*"
     ],
     "js": [
+      "jquery-3.2.1.slim.min.js",
       "distract-overflow.js"
     ]
   }]
