--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "distract-overflow",
   "version": "0.1",
+  "homepage_url": "https://github.com/nathantspencer/distract-overflow",
   "content_scripts": [{
     "matches": [
       "https://*.stackexchange.com/*",
