--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "name": "distract-overflow",
   "version": "0.1",
   "homepage_url": "https://github.com/nathantspencer/distract-overflow",
+  "background": { "scripts": [ "app/background.js"] },
   "browser_action": {
-    "default_icon": "images/icon48.png"
-  },
+    "default_icon": "images/icon48.png" },
   "icons": { "16": "images/icon16.png",
            "48": "images/icon48.png",
           "128": "images/icon128.png" },
@@ -15,7 +15,7 @@
       "https://stackoverflow.com/*"
     ],
     "css": [
-      "app/distract-overflow.css"
+      "app/hide.css"
     ]
   }]
 }
