--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
   "background": { "scripts": [ "app/background.js"] },
   "browser_action": {
     "default_icon": "images/icon48.png" },
+  "permissions": [
+      "tabs", "http://*/*", "https://*/*" ],
   "icons": { "16": "images/icon16.png",
            "48": "images/icon48.png",
           "128": "images/icon128.png" },
