--- a/manifest.json
+++ b/manifest.json
@@ -14,10 +14,7 @@
   "content_scripts": [{
     "matches": [
       "https://*.stackexchange.com/*",
-      "https://stackoverflow.com/*"
-    ],
+      "https://stackoverflow.com/*" ],
     "css": [
-      "app/hide.css"
-    ]
-  }]
+      "app/hide.css" ] }]
 }
